2001-07-09  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/C/xacc-whats-new.sgml: fix spelling

	* doc/sgml/C/xacc-about.sgml: fix version

	* src/Makefile.am: link intl libs with gnucash-make-guids

	* src/register/QuickFill.c: same as below

	* src/register/quickfillcell.c: conditionally include wctype.h

	* configure.in: check for wctype.h

2001-07-07  Dave Peticolas  <dave@krondo.com>

	* src/test/gnc-test-stuff.c (get_random_query): not so many terms

	* src/test/Makefile.am: add test-scm-query

	* src/test/.cvsignore: add test-scm-query

	* src/test/test-scm-query.c: new test -- check query<->scm
	conversion

	* src/guile/gnucash.h: new func api

	* src/guile/gnucash.c.in (gnc_gw_init): new func

	* src/guile/gnc-helpers.c: fix bugs

	* src/engine/Query.c: fix bugs

2001-07-06  Dave Peticolas  <dave@krondo.com>

	* src/gnome/glade/sched-xact.glade: tweak

	* src/test/gnc-test-stuff.c (get_random_boolean): new func.
	(get_random_query): new func.

2001-07-06  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction.scm: Add new sort option "register
	order", make it the default for secondary sorting.

	* po/ChangeLog: removed from CVS.

2001-07-06  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/gnc-schedxaction-xml-v2.c: Support for new
	SchedXaction options [create/remind-days-in-advance; auto-create,
	notify-on-creation].
	
	* src/gnome/dialog-scheduledxaction.c (putSchedXactionInClist):
	Fix for next-occurance processing.

	* src/engine/SchedXaction.c (xaccSchedXactionGetNextInstance):
	Better handling of start date/last-occur date/current dates when
	generating the next occurance date.  Gotta remember to clear those
	g_dates, lest the come up 'valid' due to stack trash... :(

	* src/gnome/gnc-sxlastrun.{h,c}: Added; newer/better
	since-last-occur dialog.

	* src/gnome/window-main.c: Added Scheduled Transaction stuff to
	"Tools" menu.

	* src/scm/prefs.scm: Added initial cut at Scheduled Transaction
	preferences.
