@@ -1,5 +1,9 @@
 2001-07-09  Dave Peticolas  <dave@krondo.com>
 
+	* configure.in: check for ghttp_ssl.h
+
+	* src/gnome/gnc-http.c: conditionally include ghttp_ssl.h
+
 	* doc/sgml/C/xacc-whats-new.sgml: fix spelling
 
 	* doc/sgml/C/xacc-about.sgml: fix version
